<resources>
    <string name="app_name">VirgoMusic</string>
    <string name="shuffle">Shuffle</string>
    <string name="playlists">Playlists</string>
    <string name="favorite">Favorite</string>
    <string name="total_songs_">Total Songs:</string>
    <string name="allow_all_permission">Allow All Permission</string>
    <string name="go">Go</string>
    <string name="write_storage">Write Storage</string>
    <string name="permission">Permission</string>
    <string name="must_accept_all_permission">You must agree to the permissions first!</string>
    <string name="feature">Feature</string>
    <string name="rate">Rate</string>
    <string name="language">Language</string>
    <string name="defaut_device">Default device</string>
    <string name="message_null_list_songs">No Song</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="next">Next</string>
    <string name="started">Started</string>
    <string name="title_intro_1">Title Intro 1</string>
    <string name="title_intro_2">Title Intro 2</string>
    <string name="title_intro_3">Title Intro 3</string>
    <string name="des_intro_1">Des Intro 1</string>
    <string name="des_intro_2">Des Intro 2</string>
    <string name="des_intro_3">Des Intro 3</string>
    <string name="languages">Languages</string>
    <string name="virgo_comic">Virgo Music</string>
    <string name="equalizer">Equalizer</string>
    <string name="download">Download</string>
    <string name="presets">Presets</string>
    <string name="timer">Timer</string>
    <string name="enter_your_youtube_link">Enter your youtube link</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy policy</string>
</resources>