<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.act.home.HomeActivity"
        tools:openDrawer="start">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg">

            <ImageView
                android:id="@+id/iconNavigation"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_margin="@dimen/_16sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_navigation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/color_secondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24sdp"
                android:fontFamily="@font/bold"
                android:text="@string/virgo_comic"
                android:textColor="@color/color_text_high_light"
                android:textSize="@dimen/_24ssp"
                app:layout_constraintBottom_toBottomOf="@id/iconNavigation"
                app:layout_constraintStart_toEndOf="@id/iconNavigation"
                app:layout_constraintTop_toTopOf="@id/iconNavigation" />

            <LinearLayout
                android:id="@+id/layoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@id/iconNavigation">

                <LinearLayout
                    android:id="@+id/buttonShuffle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingVertical="@dimen/_3sdp">

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:src="@drawable/icon_shuffle" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:text="@string/shuffle"
                        android:textColor="@color/color_text_primary"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/color_primary" />

                <LinearLayout
                    android:id="@+id/buttonPlaylist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingVertical="@dimen/_3sdp"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:src="@drawable/icon_playlist" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:text="@string/playlists"
                        android:textColor="@color/color_text_primary"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/color_primary" />

                <LinearLayout
                    android:id="@+id/buttonFavorite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingVertical="@dimen/_3sdp">

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:src="@drawable/icon_favorite_troke"
                        app:tint="@color/color_secondary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:text="@string/favorite"
                        android:textColor="@color/color_text_primary"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>

                <View
                    android:visibility="gone"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/color_primary" />

                <LinearLayout
                    android:id="@+id/buttonDownload"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingVertical="@dimen/_3sdp"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:src="@drawable/icon_download" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:text="@string/download"
                        android:textColor="@color/color_text_primary"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_primary"
                app:layout_constraintTop_toTopOf="@id/layoutButton" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_primary"
                app:layout_constraintTop_toBottomOf="@id/layoutButton" />

            <TextView
                android:id="@+id/textTotalSong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:fontFamily="@font/italic"
                android:text="@string/total_songs_"
                android:textColor="@color/color_text_primary"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutButton" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/nowPlaying"
                app:layout_constraintTop_toBottomOf="@id/textTotalSong"
                tools:listitem="@layout/item_song_vertical" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textTotalSong" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/nowPlaying"
                android:name="duylt.mobile.app.ecommerce.virgomusic.presentation.ui.fra.NowPlayingFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout="@layout/fragment_now_playing" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        ]

        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iconBack"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/icon_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/color_secondary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:fontFamily="@font/bold"
                    android:text="@string/feature"
                    android:textColor="@color/color_text_high_light"
                    android:textSize="@dimen/_18ssp"
                    app:layout_constraintBottom_toBottomOf="@id/iconBack"
                    app:layout_constraintStart_toEndOf="@id/iconBack"
                    app:layout_constraintTop_toTopOf="@id/iconBack" />

                <LinearLayout
                    android:id="@+id/buttonLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:background="#332A0183"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:paddingVertical="@dimen/_12sdp"
                    app:layout_constraintTop_toBottomOf="@id/iconBack">

                    <ImageView
                        android:layout_width="@dimen/_18ssp"
                        android:layout_height="@dimen/_18ssp"
                        android:src="@drawable/icon_language" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bold"
                            android:text="@string/language"
                            android:textColor="@color/color_text_primary"
                            android:textSize="@dimen/_14ssp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/medium"
                            android:text="@string/defaut_device"
                            android:textColor="#201510"
                            android:textSize="@dimen/_12ssp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:paddingVertical="@dimen/_12sdp"
                    app:layout_constraintTop_toBottomOf="@id/buttonLanguage"
                    android:id="@+id/buttonShare"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_4sdp">

                    <ImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:src="@drawable/icon_share"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:text="@string/share"
                        android:textSize="@dimen/_14ssp"
                        android:textColor="@color/color_text_primary"
                        android:fontFamily="@font/medium"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:paddingVertical="@dimen/_12sdp"
                    app:layout_constraintTop_toBottomOf="@id/buttonShare"
                    android:id="@+id/buttonRate"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_4sdp">

                    <ImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:src="@drawable/icon_star"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:text="@string/rate"
                        android:textSize="@dimen/_14ssp"
                        android:textColor="@color/color_text_primary"
                        android:fontFamily="@font/medium"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:paddingVertical="@dimen/_12sdp"
                    app:layout_constraintTop_toBottomOf="@id/buttonRate"
                    android:id="@+id/buttonPrivacy"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_4sdp">

                    <ImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:src="@drawable/icon_policy"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:text="@string/privacy_policy"
                        android:textSize="@dimen/_14ssp"
                        android:textColor="@color/color_text_primary"
                        android:fontFamily="@font/medium"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>